--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,6 @@
-May 22nd, 2006 - Martin Baulig
+May 24th, 2006 - Martin Baulig
 ------------------------------
 
-[The release is postponed due to a pending critical bug]
 Released version 0.20 "Bruxelles" of the Mono Debugger :-)
 
 - This version of the debugger requires the latest Mono from SVN;
@@ -14,6 +13,8 @@ Released version 0.20 "Bruxelles" of the Mono Debugger :-)
 
 - Cleaned up method lookups; there's a very complex test for them
   in test/testsuite/TestMethodLookup.cs.
+
+- Lots of stability improvements.
 
 - Fixed a very old GC bug which was preventing us from running
   xsp inside the debugger.
@@ -28,6 +29,8 @@ Released version 0.20 "Bruxelles" of the Mono Debugger :-)
 - Unfortunately, a `make check' now requires even more memory
   than before; I'm still investigating the issue.
   I'm currently using `ulimit -Sm 1000000 -Sv 1000000'.
+
+- The next releases will be "Dublin", "Sidney" and "Cologne".
 
 April 10th, 2006 - Martin Baulig
 --------------------------------
