--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-05-31  Martin Baulig  <martin@ximian.com>
 
+	* classes/Debugger.cs: Added error checking.
+
+2006-05-31  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ITargetNotification.cs
 	(TargetState): Don't use all-capital letters.
 
