--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-07-08  Martin Baulig  <martin@ximian.com>
+
+	* arch/DwarfReader.cs
+	(DwarfLocation): New protected class; moved the location reading here.
+	(DwarfLocation.GetLocation): Correctly handle `DW_OP_fbreg'.
+	(DieSubprogram): Support the `DW_AT_frame_base' attribute.
+	(DwarfTargetVariable): Moved the location code into `DwarfLocation'.
+
 2006-07-06  Martin Baulig  <martin@ximian.com>
 
 	* arch/Architecture_I386.cs
