--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-07-12  Martin Baulig  <martin@ximian.com>
 
+	* backends/SingleSteppingEngine.cs
+	(SingleSteppingEngine.MethodHasSource): Don't check
+	`Module.StepInto' if the method we're stepping into is in the same
+	module.	
+
+2006-07-12  Martin Baulig  <martin@ximian.com>
+
 	* classes/DebuggerOptions.cs
 	(DebuggerOptions.Prompt): Removed.
 	(DebuggerOptions.LoadNativeSymbolTable): Removed.
