--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,26 @@
 2006-07-13  Martin Baulig  <martin@ximian.com>
 
+	* classes/DebuggerOptions.cs
+	(DebuggerOptions): Make this a DebuggerMarshalByRefObject.
+	(DebuggerOptions.Clone): New internal method.
+
+	* classes/DebuggerSession.cs
+	(DebuggerSession.Clone): Added `DebugggerOptions new_options' and
+	`string new_name' arguments.
+
+	* classes/Process.cs
+	(Process.Session): Get the session from the servant.
+
+	* backends/ProcessStart.cs
+	(ProcessStart.SetupApplication): Clone the options and update them
+	to the new values.
+
+	* frontend/Command.cs
+	(ShowCommand.ShowArgumentsCommand): Added `show args' command to
+	show the command line arguments.
+
+2006-07-13  Martin Baulig  <martin@ximian.com>
+
 	* classes/DebuggerConfiguration.cs
 	(DebuggerConfiguration): Rewrite to use System.Data with the
 	DebuggerConfiguration.xsd schema.
