--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-18  Martin Baulig  <martin@ximian.com>
+
+	* configure.in: Require Mono >= 1.1.16.
+
 2006-07-17  Martin Baulig  <martin@ximian.com>
 
 	Kill the System.Data dependency.
